--- a/forum/templates/forum/profile.html
+++ b/forum/templates/forum/profile.html
@@ -3,21 +3,26 @@
 {%  block titlesection %}- {{ user.username }}{%  endblock %}
 {% block head %}
     <link rel="stylesheet" type="text/css" href='{% static 'forum/style.css' %}' />
+
 {% endblock %}
 {% block body %}
     <div class="row">
         <div class="col-sm-4">
             <div class="row">
                     <div class="col-xs-6 col-sm-12">
-                         <img src="{{ user.avatar.url }}" alt="user avatar" width="200" height="200">
+                         <img src="{{ user.avatar.url }}" alt="user avatar" class="img-responsive img-profile" >
                     </div>
                     <div class="col-xs-6 col-sm-12 text-right-xs lead" id="user-details">
                         {{ user.first_name }} {{ user.last_name }}<br/>
                         <span class="glyphicon glyphicon-user"></span> {{ user.username }}<br/>
                         <a title="Reputation"><span class="glyphicon glyphicon-certificate"></span> {{ user.rep }}</a><br/>
-                        <a title="Threads"><span class="glyphicon glyphicon-file"></span> {{ user.num_threads }}</a><br/>
+                        <a title="Threads"><span class="glyphicon glyphicon-comment"></span> {{ user.num_threads }}</a><br/>
                         <a title="Posts"><span class="glyphicon glyphicon-pencil"></span> {{ user.posts }}</a><br/>
-
+                        <a title="User Since"><span class="glyphicon glyphicon-bookmark"></span> <span id="user_since"></span></a><br/>
+                        <a title="Last Seen"><span class="glyphicon glyphicon-time"></span>{% if user.last_login %} <span id="last_seen"></span>
+                        {% else %} Never logged in
+                        {% endif %}
+                        </a><br/>
                         {% if user.username in request.user.username %}
                             <a href="{% url 'forum:edit_profile' %}" role="button" class="btn btn-default">Edit profile</a>
                         {% endif %}
@@ -70,4 +75,11 @@
 
         </div>
     </div>
+
+
+    <script src="{% static 'forum/js/dateScript.js' %}"></script>
+    <script>
+    document.getElementById("user_since").innerHTML = date_fun(new Date({{ user.date_joined|date:'Y, m, d' }}));
+    document.getElementById("last_seen").innerHTML = date_fun(new Date({{ user.last_login|date:'Y, m, d' }}))
+    </script>
 {% endblock %}
