--- a/forum/templates/forum/thread.html
+++ b/forum/templates/forum/thread.html
@@ -11,7 +11,7 @@
                 <div class="col-sm-2">
                     <div class="row">
                     <div class="col-xs-6 col-sm-12">
-                        <a href="{% url 'forum:profile' post.author.username %}"><img src="{{ post.author.avatar.url }}" class="img-thumbnail" width="70"></a><br/>
+                        <a href="{% url 'forum:profile' post.author.username %}"><img src="{{ post.author.avatar.url }}" class="img-thumbnail"></a><br/>
                     </div>
                     <div class="col-xs-6 col-sm-12 text-right-xs" id="user-details">
                         <a href='{% url 'forum:profile' post.author.username %}' title="User"><span class="glyphicon glyphicon-user"></span> {{ post.author }}</a><br/>
