added supermod group, added subscribe/unsubscribe views

--- a/forum/static/forum/style.css
+++ b/forum/static/forum/style.css
@@ -58,6 +58,14 @@
     margin: 5px auto;
 }
 
+.subscr{
+    margin:0px 0px 10px 0px;
+}
+
+.subscr:visited, .subscr:hover{
+    color:#ff9900;
+}
+
 
 #user-details{
     margin-bottom: 20px;
