--- a/forum/templates/forum/thread.html
+++ b/forum/templates/forum/thread.html
@@ -1,7 +1,13 @@
 {%  extends 'forum/base.html' %}
 {% load staticfiles %}
 {% load crispy_forms_tags %}
-{%  block titlesection %}- {{ thread }}{%  endblock %}
+{%  block titlesection %}- Forum - {{ thread }}{%  endblock %}
+{% block menuleft %}<li><a href="{% url 'forum:board' thread.board.code '' %}">{{ thread.board.name }}</a></li>{% endblock %}
+{% block menu_per_page %}
+    {% if request.user.is_authenticated %}
+        <li><a href='{% url 'forum:create_thread' %}'>New Thread</a></li>
+    {% endif %}
+{% endblock %}
 {% block head %}
     <link rel="stylesheet" type="text/css" href='{% static 'forum/style.css' %}' />
 {% endblock %}
@@ -25,7 +31,7 @@
                     <div class="col-xs-6 col-sm-12 text-right-xs" id="user-details">
                         <a href='{% url 'forum:profile' post.author.username %}' title="User"><span class="glyphicon glyphicon-user"></span> {{ post.author }}</a><br/>
                         <a title="Reputation"><span class="glyphicon glyphicon-certificate"></span> {{ post.author.rep }}</a><br/>
-                        <a title="Posts"><span class="glyphicon glyphicon-pencil"></span> {{ post.author.posts }}</a>
+                        <a title="Posts"><span class="glyphicon glyphicon-comment"></span> {{ post.author.posts }}</a>
                     </div>
                     </div>
                 </div>
