--- a/forum/templates/forum/board.html
+++ b/forum/templates/forum/board.html
@@ -27,10 +27,11 @@
                     {% for thread in thread_set %}
                         {% if thread.last_post %}
                             <tr>
-                                <td id="thread"><a href="{% url 'forum:thread' thread.pk none %}">{{ thread }}</a>
+                                <td id="thread">{% if thread.is_closed %}<span class="glyphicon glyphicon-lock" title="closed"></span>{% endif %}
+                                    <a href="{% url 'forum:thread' thread.pk none %}">{{ thread }}</a>
                                     by <a href='{% url 'forum:profile' thread.first_post.author.username %}'>{{ thread.first_post.author }}</a></td>
                                 <td id="replies"><script> document.write({{ thread.post_set.all.count }} - 1)</script></td>
-                                <td id="votes"><p id="pos_votes">&#9650; {{ thread.first_post.pos_votes }}</p><p id="neg_votes">&#9660; {{ thread.first_post.neg_votes }}</p></td>
+                                <td id="votes"><p id="pos_votes"><span class="glyphicon glyphicon-triangle-top"></span> {{ thread.first_post.pos_votes }}</p><p id="neg_votes"><span class="glyphicon glyphicon-triangle-bottom"></span> {{ thread.first_post.neg_votes }}</p></td>
                                 <td id="last"><a href="#">{{ thread.last_post.pub_date|date:'Y-m-d H:i' }}</a><br/>
                                     <a href='{% url 'forum:profile' thread.last_post.author.username %}'>{{ thread.last_post.author }}</a></td>
                             </tr>
