--- a/forum/templates/forum/thread.html
+++ b/forum/templates/forum/thread.html
@@ -14,10 +14,12 @@
 {% block body %}
     <div class="row">
         <div class="col-xs-12 text-right">
-            {% if thread in request.user.subscribed_threads %}
-                <a href="{% url 'forum:unsubscribe' thread.pk %}" class="btn btn-default subscr">Unsubscribe</a>
-            {% else %}
-                 <a href="{% url 'forum:subscribe' thread.pk %}" class="btn btn-default subscr">Subscribe</a>
+            {% if not thread.is_closed %}
+                {% if thread in request.user.subscribed_threads %}
+                    <a href="{% url 'forum:unsubscribe' thread.pk %}" class="btn btn-default subscr">Unsubscribe</a>
+                {% else %}
+                     <a href="{% url 'forum:subscribe' thread.pk %}" class="btn btn-default subscr">Subscribe</a>
+                {% endif %}
             {% endif %}
         </div>
     </div>
@@ -40,12 +42,20 @@
                         {% if post == thread.first_post %}
                             <div class="panel-heading">
                                 <div class="row">
-                                    <div class="col-sm-9">
+                                    <div class="col-sm-7 col-lg-9">
+                                        {% if thread.is_closed %}<span class="glyphicon glyphicon-lock" title="closed"></span>{% endif %}
                                         <span class="lead">{{ thread.title }}</span>
                                     </div>
-                                    <div class="col-sm-3 text-right">
+                                    <div class="col-sm-5 col-lg-3 text-right">
                                         {% if post.author.username == request.user.username or thread.board in request.user.modded_boards or request.user.is_supermod %}
-                                            <a href="{% url 'forum:del_thread' thread.pk %}" class="btn btn-default" onclick="return confirm('Are you sure?')" id="delete">Delete Thread</a>
+                                            {% if thread.is_closed %}
+                                                {% if thread.closer.username == request.user.username or thread.board in request.user.modded_boards or request.user.is_supermod%}
+                                                    <a href="{% url 'forum:open_thread' thread.pk %}" class="btn btn-default thread_opt" onclick="return confirm('Do you want to re-open this thread?')">Open</a>
+                                                {% endif %}
+                                            {% else %}
+                                                <a href="{% url 'forum:close_thread' thread.pk %}" class="btn btn-default thread_opt" onclick="return confirm('Do you want to close this thread?')">Close</a>
+                                            {% endif %}
+                                            <a href="{% url 'forum:del_thread' thread.pk %}" class="btn btn-default thread_opt" onclick="return confirm('Do you want to delete this thread?')">Delete Thread</a>
                                         {% endif %}
                                     </div>
                                 </div>
@@ -58,7 +68,7 @@
                                     <div>{{ post.message|linebreaksbr }}</div>
                                 </div>
                                 <div class="col-sm-3 text-right">
-                                    {% if post.author.username in request.user.username or thread.board in request.user.modded_boards %}
+                                    {% if post.author.username in request.user.username or thread.board in request.user.modded_boards or request.user.is_supermod %}
                                         {%if post != thread.first_post %}
                                             <a href="{% url 'forum:del_post' post.pk %}?next={{ request.get_full_path|urlencode }}" class="btn btn-default" onclick="return confirm('Are you sure?')" id="delete">Delete Post</a>
                                         {% endif %}
@@ -81,7 +91,7 @@
             </div>
     {% endfor %}
 
-    {% if posts.number == posts.paginator.num_pages %}
+    {% if posts.number == posts.paginator.num_pages and not thread.is_closed %}
         <section id="bottom">
             <form method="post">
                 {% csrf_token %}
