--- a/djangle/static/djangle/style.css
+++ b/djangle/static/djangle/style.css
@@ -229,13 +229,12 @@ header {
     min-width:160px;
     text-align: right;
     background-color:#ffaa00;
-    -webkit-background-clip:padding-box;
-    background-clip:padding-box;
     border:0px;
     border-radius:4px;
     -webkit-box-shadow:0 6px 12px #c1c1c1;
     box-shadow:0 6px 12px #c1c1c1;
     margin-top:50px;
+    padding:0px;
 }
 
 .dropdown-menu>li>a{
@@ -243,11 +242,32 @@ header {
     font-weight: bold;
 }
 
+.dropdown-menu>li:first-child{
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.dropdown-menu>li:last-child{
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
 .dropdown-menu>li>a:hover{
     background-color: #fff;
     color: #ff9900;
     text-shadow: none;
 }
+
+.dropdown-menu>li:first-child>a:hover{
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.dropdown-menu>li:last-child>a:hover{
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
 
 .icon-bar{
     background-color: #ffffff;
