--- a/forum/templates/forum/thread.html
+++ b/forum/templates/forum/thread.html
@@ -55,7 +55,7 @@
                                             {% else %}
                                                 <a href="{% url 'forum:close_thread' thread.pk %}" class="btn btn-default thread_opt" onclick="return confirm('Do you want to close this thread?')">Close</a>
                                             {% endif %}
-                                            <a href="{% url 'forum:del_thread' thread.pk %}" class="btn btn-default thread_opt" onclick="return confirm('Do you want to delete this thread?')">Delete Thread</a>
+                                            <a href="{% url 'forum:del_post' thread.first_post.pk %}" class="btn btn-default thread_opt" onclick="return confirm('Do you want to delete this thread?')">Delete Thread</a>
                                         {% endif %}
                                     </div>
                                 </div>
