--- a/forum/templates/forum/profile_edit.html
+++ b/forum/templates/forum/profile_edit.html
@@ -52,7 +52,7 @@
                 <div class="lead">
                     <span class="glyphicon glyphicon-edit glip-action" data-toggle="collapse" data-target=".first-name" aria-expanded="false" aria-controls="first-name" onmouseover=""></span>
                     {% if user.first_name %}
-                        <a href="{% url 'forum:reset_first_name' 'first_name' %}"><span class="glyphicon glyphicon-trash glip-action" onmouseover="" title="clear"></span></a>
+                        <a href="{% url 'forum:reset_first_name' 'first_name' %}"><span class="glyphicon glyphicon-remove glip-action" onmouseover="" title="clear"></span></a>
                         <b>First Name:</b> {{ user.first_name }}
                     {% else %}
                         First Name field is empty
@@ -66,7 +66,7 @@
                     </div><br/>
                     <span class="glyphicon glyphicon-edit glip-action" data-toggle="collapse" data-target=".last-name" aria-expanded="false" aria-controls="last-name" onmouseover=""></span>
                     {% if user.last_name %}
-                        <a href="{% url 'forum:reset_last_name' 'last_name' %}"><span class="glyphicon glyphicon-trash glip-action" onmouseover="" title="clear"></span></a>
+                        <a href="{% url 'forum:reset_last_name' 'last_name' %}"><span class="glyphicon glyphicon-remove glip-action" onmouseover="" title="clear"></span></a>
                         <b>Last Name:</b> {{ user.last_name }}
                     {% else %}
                         Last Name field is empty
