--- a/forum/templates/forum/create.html
+++ b/forum/templates/forum/create.html
@@ -17,6 +17,8 @@
                 {% if object == 'subscription' %}
                     <input type="submit" value="Subscribe" class="btn btn-default" />
                     <a href="{% url 'forum:thread' thread.pk none %}" role="button" class="btn btn-default">Cancel</a>
+                {% elif object == 'moderation' %}
+                    <input type="submit" value="Confirm" class="btn btn-default" />
                 {% else %}
                 <input type="submit" value="Create" class="btn btn-default" />
                 {% endif %}
