--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -21,8 +21,10 @@
                         <div class="col-xs-2 text-right">
                             {% if board in request.user.modded_boards%}
                                 <span class="glyphicon glyphicon-knight" title="modded" id="modded"></span>
+                            {% elif request.user.is_superuser %}
+                                <span class="glyphicon glyphicon-king" title="supermodded" id="modded"></span>
                             {% elif request.user.is_supermod %}
-                                <span class="glyphicon glyphicon-knight" title="supermodded" id="modded"></span>
+                                <span class="glyphicon glyphicon-queen" title="supermodded" id="modded"></span>
                             {% endif %}
                         </div>
                     </div>
@@ -44,9 +46,11 @@
                             {% for thread in board.get_new %}
                                 {% if thread.last_post %}
                                     <tr>
-                                        <td id="thread">{% if thread.is_closed %}<span class="glyphicon glyphicon-lock" title="closed"></span>{% endif %}
+                                        <td id="thread">
+                                            {% if thread.is_closed %}<span class="glyphicon glyphicon-lock" title="closed"></span>{% endif %}
                                             <a href="{% url 'forum:thread' thread.pk 1 %}">{{ thread }}</a>
-                                            by <a href='{% url 'forum:profile' thread.first_post.author.username %}'>{{ thread.first_post.author }}</a></td>
+                                            by <a href='{% url 'forum:profile' thread.first_post.author.username %}'>{{ thread.first_post.author }}</a>
+                                        </td>
                                         <td id="replies"><script> document.write({{ thread.post_set.all.count }} - 1)</script></td>
                                         <td id="votes"><p id="pos_votes"><span class="glyphicon glyphicon-triangle-top"></span> {{ thread.first_post.pos_votes }}</p><p id="neg_votes"><span class="glyphicon glyphicon-triangle-bottom"></span> {{ thread.first_post.neg_votes }}</p></td>
                                         <td id="last"><a href="{% url 'forum:thread' thread.pk thread.last_post.get_page %}#{{ thread.last_post.pk }}">{{ thread.last_post.pub_date|date:'Y-m-d H:i' }}</a><br/>
