--- a/forum/templates/forum/profile.html
+++ b/forum/templates/forum/profile.html
@@ -39,15 +39,15 @@
         </div>
         <div class="col-sm-8">
             <div class="text-right">
-                {% if request.user.is_supermod %}
+                {% if request.user.is_supermod and user != request.user and not user.is_superuser %}
                     <a href="{% url 'forum:edit_mod' user.pk %}" role="button" class="btn btn-default usr-button">Manage Mod</a>
-                    {% if request.user.is_superuser and not user.is_supermod %}
+                    {% if user != request.user and request.user.is_superuser and not user.is_supermod %}
                         <a href="{% url 'forum:supermod_toggle' user.pk %}" role="button" class="btn btn-default usr-button">Set Supermod</a>
                     {% endif %}
                 {% endif %}
-                {% if request.user.modded_boards  or request.user.is_supermod%}
+                {% if user != request.user and request.user.modded_boards and not user.is_superuser or user != request.user and request.user.is_supermod and not user.is_superuser %}
                     <a href="{% url 'forum:ban_user' user.pk %}" role="button" class="btn btn-default usr-button">Ban</a>
-                    {% if user.is_banned %}
+                    {% if user.is_banned and user != request.user %}
                         <a href="{% url 'forum:unban_user' user.pk %}" role="button" class="btn btn-default usr-button">Unban</a>
                     {% endif %}
                 {% endif %}
