added doscrtings for almost all the code, merged reduntant methods, code optimizations

--- a/forum/templates/forum/profile_edit.html
+++ b/forum/templates/forum/profile_edit.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href='{% static 'forum/style.css' %}' />
 {% endblock %}
 {% block body %}
-    {%  if error %}
+    {%  if errors %}
         <div class="alert alert-danger">
-            <strong>ERROR:</strong> {% for err in error %}{{err}}{% endfor %}
+            <strong>ERROR:</strong> {% for error in errors %}{{error}}{% endfor %}
         </div>
     {%  endif %}
     <div class="row">
