--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href='{% static 'forum/style.css' %}' />
 {% endblock %}
 {% block body %}
+    <script src="{% static 'forum/js/localTime.js' %}"></script>
     {%  if errors %}
         <div class="alert alert-danger">
             <strong>ERROR:</strong> {% for error in errors %}{{error}}{% endfor %}
@@ -58,7 +59,7 @@
                                         </td>
                                         <td id="replies"><script> document.write({{ thread.post_set.all.count }} - 1)</script></td>
                                         <td id="votes"><p id="pos_votes"><span class="glyphicon glyphicon-triangle-top"></span> {{ thread.first_post.pos_votes }}</p><p id="neg_votes"><span class="glyphicon glyphicon-triangle-bottom"></span> {{ thread.first_post.neg_votes }}</p></td>
-                                        <td id="last"><a href="{% url 'forum:thread' thread.pk thread.last_post.get_page %}#{{ thread.last_post.pk }}">{{ thread.last_post.pub_date|date:'Y-m-d H:i' }}</a><br/>
+                                        <td id="last"><a href="{% url 'forum:thread' thread.pk thread.last_post.get_page %}#{{ thread.last_post.pk }}"><script> document.write(date("{{ thread.last_post.pub_date|date:'d M Y H:i:s' }}"))</script></a><br/>
                                             <a href='{% url 'forum:profile' thread.last_post.author.username %}'>{{ thread.last_post.author }}</a></td>
                                     </tr>
                                 {% endif %}
